--- a/業主大會.md
+++ b/業主大會.md
@@ -6,3 +6,9 @@ permalink: /業主大會/
 ---
 
 # 第九屆
+
+{% for file in site.static_files reversed %}
+    {% if file.path contains '業主大會/09' and file.path contains '.pdf' %}
+[{{ file.name }}]({{ site.baseurl }}{{ file.path }})
+    {% endif %}
+{% endfor %}
