--- a/通訊.md
+++ b/通訊.md
@@ -7,5 +7,16 @@ permalink: /通訊/
 
 # 2020年
 
+{% for file in site.static_files reversed %}
+    {% if file.path contains '屋苑通訊/2020' and file.path contains '.pdf' %}
+[{{ file.name }}]({{ site.baseurl }}{{ file.path }})
+    {% endif %}
+{% endfor %}
+
 # 2019年
 
+{% for file in site.static_files reversed %}
+    {% if file.path contains '屋苑通訊/2019' and file.path contains '.pdf' %}
+[{{ file.name }}]({{ site.baseurl }}{{ file.path }})
+    {% endif %}
+{% endfor %}
